create: home page left side desing

--- a/index.html
+++ b/index.html
@@ -16,11 +16,18 @@
   <div class="mt-[10px] grid grid-cols-12">
     <div class="col-span-4">
       <img src="./image/devilgirl.png" alt="model-image">
-      <div class=" items-center flex mx-auto ml-[17px] mb-[9px]">
-        <a href=""
-          class="bg-[#58c2fd] text-[#fff] px-[4px] py-[2px] text-[18px] rounded-[5px] w-[85%] text-center font-bold">POST
+      <div class=" items-center flex mx-auto  mb-[9px] pl-[15px]">
+        <a href="" style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.36)"
+          class="bg-[#58c2fd] text-[#fff] px-[2px] py-[4px] text-[18px] rounded-[5px] w-[85%] text-center font-bold ">POST
           NOW</a>
       </div>
+      <div class="w-[90%]">
+        <h6 class="text-[#810107] cursor-pointer text-[14px] font-bold mt-[4px] text-center"> Select location </h6>
+        <h5 class="cursor-pointer text-[#fcb9e3] text-[13px] underline font-bold mb-[12px] text-center">change location
+        </h5>
+        <img src="./image/topLeftFlowers_trans.png" alt="model-image">
+      </div>
+
 
     </div>
     <div class="col-span-8">
