create: home page design

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     rel="stylesheet" />
 </head>
 
-<body class="max-w-[600px] mx-auto">
+<body class="max-w-[600px] mx-auto px-[15px]">
 
-  <div class="mt-[10px] grid grid-cols-12">
+  <div class="mt-[25px] grid grid-cols-12">
     <div class="col-span-4">
       <img src="./image/devilgirl.png" alt="model-image">
       <div class=" items-center flex mx-auto  mb-[9px] pl-[15px]">
@@ -30,17 +30,56 @@
 
 
     </div>
-    <div class="col-span-8">
+    <div class="col-span-8 px-[15px]">
       <img src="./image/megapersonalsPageHeader2.png" alt="model-image">
       <img class="my-[10px]" src="./image/meetnow.png" alt="model-image">
       <div>
         <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">MegaPersonals is restricted to</p>
         <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">persons 18 years of age or older*</p>
       </div>
+      <div class="w-full mt-[4rem]">
+        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+          class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">W
+            seek
+            M</a></button>
+        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+          class="bg-[#ffa300] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">M seek
+            W</a></button>
+        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+          class="bg-[#e7c660] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">M seek
+            M</a></button>
+        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+          class="bg-[#857a30] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">W seek
+            W</a></button>
+        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+          class="bg-[#a6a3a3] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a
+            href="">Trans</a></button>
+
+      </div>
     </div>
   </div>
+  <div>
+    <p class="text-center text-[#edddc0] italic"><strong class="text-[#edddc0]">MegaPersonals</strong> is a classifieds
+      service
+    </p>
+    <p class="text-center text-[#edddc0] text-[16px] italic">for people wanting to <strong class="text-[#21d42b]">MEET
+        NOW!</strong>
+    </p>
+  </div>
+  <footer class="pb-[32px]">
+    <div class="my-[20px] text-center">
+      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
+        class="text-[#046aaf] text-[12px]">|</span>
+      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">About Us</a> <span
+        class="text-[#046aaf] text-[12px]">|</span>
+      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
+        class="text-[#046aaf] text-[12px]">|</span>
+      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
+      <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
+    </div>
 
-
+    <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
+  </footer>
 
 </body>
 
