--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="my-[20px] text-center">
       <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
         class="text-[#046aaf] text-[12px]">|</span>
-      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">About Us</a> <span
+      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a> <span
         class="text-[#046aaf] text-[12px]">|</span>
       <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
         class="text-[#046aaf] text-[12px]">|</span>
