fix: about us section fotter

--- a/about-us.html
+++ b/about-us.html
@@ -46,20 +46,75 @@
             you a link or ask for your password. The same goes for emails.
         </p>
 
-        <ul style="list-style-type: disc;" class="mb-[10px]">
-            <li>Our contact forms on <strong>MegaPersonals.eu</strong></li>
-            <li>Emails FROM: <a href="mailto:support@megapersonals.eu">support@megapersonals.eu</a></li>
-            <li>On BlueSky our profile is <a href="https://bsky.app/profile/megapersonals.eu">@megapersonals.eu</a></li>
-            <li>On Twitter / X we are profile <a href="https://twitter.com/Mega_Personals">@Mega_Personals</a></li>
-            <li>On Reddit we are <a href="https://www.reddit.com/user/MegaPersonals_REAL">u/MegaPersonals_REAL</a></li>
-            <li>On Instagram we are <a
-                    href="https://www.instagram.com/megapersonals_official">@megapersonals_official</a></li>
+        <ul style="list-style-type: disc;" class="mb-[10px] pl-10">
+            <li class="text-[14px] text-[#333] leading-[1.4]">Our contact forms on <strong
+                    class="text-[#a20092] hover:underline">MegaPersonals.eu</strong>
+            </li>
+            <li class="text-[14px] text-[#333] leading-[1.4]">Emails FROM: <a href="mailto:support@megapersonals.eu"
+                    class="text-[#0000EE] text-[14px] hover:underline">support@megapersonals.eu</a></li>
+            <li class="text-[14px] text-[#333] leading-[1.4]">On BlueSky our profile is <a
+                    href="https://bsky.app/profile/megapersonals.eu"
+                    class="text-[#0000EE] text-[14px] hover:underline">@megapersonals.eu</a></li>
+            <li class="text-[14px] text-[#333] leading-[1.4]">On Twitter / X we are profile <a
+                    href="https://twitter.com/Mega_Personals"
+                    class="text-[#0000EE] text-[14px] hover:underline">@Mega_Personals</a>
+            </li>
+            <li class="text-[14px] text-[#333] leading-[1.4]">On Reddit we are <a
+                    href="https://www.reddit.com/user/MegaPersonals_REAL"
+                    class="text-[#0000EE] text-[14px] hover:underline">u/MegaPersonals_REAL</a></li>
+            <li class="text-[14px] text-[#333] leading-[1.4]">On Instagram we are <a
+                    href="https://www.instagram.com/megapersonals_official"
+                    class="text-[#0000EE] text-[14px] hover:underline">@megapersonals_official</a></li>
         </ul>
 
         <p class="mb-[10px] text-justify text-[14px] text-[#333] leading-[1.42857143]">Our member support team is
             dedicated to helping our legitimate members maintain their account. While also wiping out scammers as
             quickly as possible. These are the ONLY real channels to communicate with them:
         </p>
+
+        <div class="grid md:grid-cols-2 grid-cols-1">
+            <div class="flex items-start">
+                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
+                <div class="px-[10px] pb-[10px]">
+                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Titania</h3>
+                    <h5 class="text-[#94B2C0] text-[12px] italic">Managing Director</h5>
+                    <p class="text-[12px] text-[#333]">Liberty for consenting adults! Despise the scammers!
+                        De-stigmatise,
+                        de-criminalise. Love my
+                        team. Feel blessed!</p>
+                </div>
+            </div>
+            <div class="flex items-start">
+                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
+                <div class="px-[10px] pb-[10px]">
+                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Patsak</h3>
+                    <h5 class="text-[#94B2C0] text-[12px] italic">Chief Engineer</h5>
+                    <p class="text-[12px] text-[#333]">I enjoy building great software for this community.
+                    </p>
+                </div>
+            </div>
+            <div class="flex items-start">
+                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
+                <div class="px-[10px] pb-[10px]">
+                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Brooke Frost</h3>
+                    <h5 class="text-[#94B2C0] text-[12px] italic">Chief Support Priestess</h5>
+                    <p class="text-[12px] text-[#333]">Kindness with an edge. Friendly by nature; fierce by necessity.
+                        Supporting team collaboration for collective success. Compassion with a hint of venom.
+                    </p>
+                </div>
+            </div>
+            <div class="flex items-start">
+                <img src="./image/p1.png" class="w-[114px] h-auto" alt="">
+                <div class="px-[10px] pb-[10px]">
+                    <h3 class="text-[1.5em] italic text-[#333] leading-[1.4]">Violet Langridge</h3>
+                    <h5 class="text-[#94B2C0] text-[12px] italic">Support Champion</h5>
+                    <p class="text-[12px] text-[#333]">I believe in the work I do and aim to make your day better, one
+                        interaction at a time.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <button class="bg-[#33C8FF] text-white py-[6px] px-[18px] rounded-[18px] text-[16px]">BACK</button>
 
 
     </div>
