--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
     </div>
-    <div class="col-span-8 px-[15px]">
+    <div class="col-span-8">
       <img src="./image/megapersonalsPageHeader2.png" alt="model-image">
       <img class="my-[10px]" src="./image/meetnow.png" alt="model-image">
       <div>
@@ -72,7 +72,7 @@
         class="text-[#046aaf] text-[12px]">|</span>
       <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a> <span
         class="text-[#046aaf] text-[12px]">|</span>
-      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
+      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="treams.html">Policies & Terms</a> <span
         class="text-[#046aaf] text-[12px]">|</span>
       <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
       <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
