--- a/contact.html
+++ b/contact.html
@@ -12,20 +12,31 @@
 </head>
 
 <body class="max-w-[600px] mx-auto px-[15px]">
-
     <div class="w-[72%] mx-auto mt-3">
         <img src="./image/megapersonalsPageHeader 1.png" alt="">
     </div>
-    <div class="py-[25px]">
-        <h4 class="text-center text-[18px] underline text-[#333] font-bold my-[10px]">Megapersonals Terms & Policies
-        </h4>
-        <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="treamsOfUse.html">Terms of Use</a></h6>
-        <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="subpoenas.html">Subpoenas</a></h6>
-        <h6 class="hover:underline text-[#337ab7] text-center mb-[8px]"><a href="privacy-policy.html">Privacy Policy</a>
-        </h6>
+    <div class="w-[72%] mx-auto my-7">
+        <img src="./image/support-email-text.png" alt="">
+    </div>
+    <div class="pt-[25px] w-[90%] mx-auto">
+
+        <h4 class="text-center text-[#B7A690] text-[25px] mt-[7px] ">Contact Us </h4>
+
+        <div class="bg-[#fdfeb5] border-[2px] border-[#fde45b] rounded-[25px] p-[10px]">
+            <div class="py-[6px] px-[12px]">
+                <input type="text" placeholder="Your Email Address" class="w-full">
+            </div>
+            <div class="py-[6px] px-[12px]">
+                <input type="text" placeholder="Your Email Address" class="w-full">
+            </div>
+            <div>
+                <h3>Message</h3>
+            </div>
+        </div>
+
     </div>
 
-    <footer class="pt-[32px] ">
+    <footer class="pt-[32px] mb-[32px] ">
         <div class="my-[20px] text-center ">
             <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
                 class="text-[#046aaf] text-[12px]">|</span>
@@ -33,10 +44,12 @@
                 class="text-[#046aaf] text-[12px]">|</span>
             <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Policies & Terms</a> <span
                 class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
+            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
             <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a>
             </div>
         </div>
+
+        <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
     </footer>
 
 </body>
