--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         class="text-[#046aaf] text-[12px]">|</span>
       <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="treams.html">Policies & Terms</a> <span
         class="text-[#046aaf] text-[12px]">|</span>
-      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Contact Us</a>
+      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
       <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
     </div>
 
