fix: contact page

--- a/contact.html
+++ b/contact.html
@@ -24,13 +24,25 @@
 
         <div class="bg-[#fdfeb5] border-[2px] border-[#fde45b] rounded-[25px] p-[10px]">
             <div class="py-[6px] px-[12px]">
-                <input type="text" placeholder="Your Email Address" class="w-full">
+                <input type="text" placeholder="Your Email Address"
+                    class="w-full my-[0.5em] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
             </div>
             <div class="py-[6px] px-[12px]">
-                <input type="text" placeholder="Your Email Address" class="w-full">
+                <input type="text" placeholder="Your Email Address"
+                    class="w-full my-[0.5em] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
             </div>
-            <div>
-                <h3>Message</h3>
+            <div class="py-[6px] px-[12px]">
+                <h3 class="text-center">Message</h3>
+                <textarea class="w-full border-[2px] border-[#888888] h-[200px] text-[18px]" name="" id=""></textarea>
+            </div>
+            <div class="py-[6px] px-[12px]">
+                <input type="text" placeholder="Your Email Address"
+                    class="w-full my-[0.5em] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
+            </div>
+            <div class="flex items-center justify-center w-full mb-14">
+
+                <button class="bg-[#0492ff] text-[18px] text-white w-[170px] rounded-[3px] mt-[25px] h-[30px]">Send
+                    Message</button>
             </div>
         </div>
 
@@ -50,6 +62,9 @@
         </div>
 
         <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
+        <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">For support email <span
+                class="cursor-pointer hover:underline">support@megapersonals.eu</span></p>
+        <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">OR contact: +40.312.296.179</p>
     </footer>
 
 </body>
