--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
       <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="treams.html">Policies & Terms</a> <span
         class="text-[#046aaf] text-[12px]">|</span>
       <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
-      <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="">Manage Posts</a></div>
+      <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="login.html">Manage Posts</a>
+      </div>
     </div>
 
     <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
