fix: login page

--- a/login.html
+++ b/login.html
@@ -12,15 +12,43 @@
 </head>
 
 <body class="max-w-[600px] mx-auto px-[15px]">
-    <div class="w-[72%] mx-auto mt-3">
+    <div class="w-[72%] mx-auto mt-[38px]">
         <img src="./image/megapersonalsPageHeader 1.png" alt="">
     </div>
     <div>
-        <p class="mt-[20px] mb-[10px]">Is this your first time posting?
+        <p class="mt-[20px] mb-[10px] text-center text-[#b7a690] text-[18px] font-medium">Is this your first time
+            posting?
         </p>
+        <div class="flex mx-auto items-center justify-center bg-[#0492ff] rounded-[3px] p-[3px] w-[245px]">
+
+            <button class=" text-white text-[25px] font-bold cursor-pointer text-center ">Start
+                Here</button>
+        </div>
+        <p class="mt-[20px] mb-[10px] text-center text-[#b7a690] text-[18px] font-medium">Already have an account?
+        </p>
+        <div class="flex mx-auto items-center justify-center w-full">
+            <div class="w-[243px]">
+
+                <input type="text" placeholder="Email"
+                    class=" border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
+
+                <input type="password" placeholder="password"
+                    class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
+
+                <input type="password" placeholder="Enter code from the picture"
+                    class="mt-[8px] border-[2px] border-[#888888] py-[2px] px-3 rounded-[3px] text-[18px]">
+
+                <div class="flex items-center justify-center">
+
+                    <button
+                        class="bg-[#feb161] text-[20px] text-white mt-[10px] w-[108px] h-[43px] font-bold ">SUBMIT</button>
+                </div>
+
+            </div>
+        </div>
     </div>
 
-    <div class="pt-[25px] w-[90%] mx-auto">
+    <!-- <div class="pt-[25px] w-[90%] mx-auto">
 
         <h4 class="text-center text-[#B7A690] text-[25px] mt-[7px] ">Contact Us </h4>
 
@@ -48,7 +76,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
     <footer class="pt-[32px] mb-[32px] ">
         <div class="my-[20px] text-center ">
