create: send reset password page

--- a/login.html
+++ b/login.html
@@ -54,7 +54,8 @@
             <h3 class="absolute right-[190px] top-8 text-[50px] font-bold">?</h3>
 
         </div>
-        <p class="text-[#0000EE] text-[14px] text-center mt-[20px] hover:underline">FORGOT PASSWORD?</p>
+        <p class="text-[#0000EE] text-[14px] text-center mt-[20px] hover:underline"><a
+                href="send-reset-password.html">FORGOT PASSWORD?</a></p>
     </div>
 
 
