fix: contact page

--- a/about-us.html
+++ b/about-us.html
@@ -114,7 +114,9 @@
                 </div>
             </div>
         </div>
-        <button class="bg-[#33C8FF] text-white py-[6px] px-[18px] rounded-[18px] text-[16px]">BACK</button>
+        <div class="flex justify-center">
+            <button class="bg-[#33C8FF] text-white py-[6px] px-[18px] rounded-[18px] text-[16px]">BACK</button>
+        </div>
 
 
     </div>
