--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,10 +17,10 @@
     </div>
     <div class="pt-[25px]">
 
-        <h2 class="underline mt-[20px] mb-[10px]  text-[30px] text-[#6a6969] font-bold text-center">Privacy Policy</h2>
-        <h4>Last Updated: Apr 30, 2024</h4>
-        <h4>Introduction</h4>
-        <h4>Welcome to Sfanti Grup Solutions SRL privacy policy.</h4>
+        <h2 class="mt-[20px] mb-[10px]  text-[30px] text-[#6a6969] font-bold text-center">Privacy Policy</h2>
+        <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Last Updated: Apr 30, 2024</h4>
+        <h4 class="mb-[10px] text-[#333] text-[14px ] font-bold">Introduction</h4>
+        <h4 class="mb-[10px] text-[#333] text-[14px ] ">Welcome to Sfanti Grup Solutions SRL privacy policy.</h4>
         <p class="my-[10px] text-[16px] text-justify text-[#333] leading-[1.42857143]">Sfanti Grup Solutions SRL (“we,
             us, our, ours, etc.”)
             is the
