--- a/register.html
+++ b/register.html
@@ -72,8 +72,9 @@
             <h3 class="absolute right-[190px] top-8 text-[50px] font-bold">?</h3>
 
         </div>
-        <p class="text-[#b8b8b8] text-[14px] text-center mt-[10px] mb-14 hover:underline font-bold">Already have an
-            account?
+        <p class="text-[#b8b8b8] text-[14px] text-center mt-[10px] mb-14 hover:underline font-bold"><a
+                href="login.html">Already have an
+                account?</a>
         </p>
     </div>
 
