--- a/subpoenas.html
+++ b/subpoenas.html
@@ -17,7 +17,7 @@
     </div>
     <div class="pt-[25px]">
 
-        <h2 class="underline mt-[20px]  text-[18px] text-[#333] font-bold text-center">SUBPOENA & LAW ENFORCEMENT
+        <h2 class="underline   text-[18px] text-[#333] font-bold text-center">SUBPOENA & LAW ENFORCEMENT
             REQUEST POLICY
         </h2>
         <h2 class="underline text-[18px] text-[#333] font-bold text-center">Last Updated: Apr 30, 2024
