create: post list

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </div>
       <div class="w-full mt-[4rem]">
         <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
-          class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">W
+          class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a
+            href="post-list.html">W
             seek
             M</a></button>
         <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
