create: post and post detail page

--- a/post-list.html
+++ b/post-list.html
@@ -1,49 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Post List</title>
     <link href="./dist/styles.css" rel="stylesheet" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
-        rel="stylesheet" />
-</head>
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body class="max-w-[600px] mx-auto relative">
-    <div class="flex items-end justify-end mt-[19px] ">
-        <img src="./image/megapersonalsPageHeader2.png" class="max-w-[366px]" alt="">
+  <body class="max-w-[600px] mx-auto relative bg-[#fbfef9]">
+    <div class="flex items-end justify-end mt-[19px]">
+      <img src="./image/megapersonalsPageHeader2.png" class="max-w-[366px]" alt="" />
     </div>
 
     <div class="flex">
-        <div class="max-w-[172px]"> <img src="./image/devilgirl.png" alt=""
-                class="absolute  max-w-[172px] h-[220px] top-0">
-        </div>
-        <div class="flex items-end justify-end mt-[5px]">
-            <img src="./image/listtitle_wsm.png" class="w-[86%] " alt="">
-
-        </div>
+      <div class="max-w-[172px]">
+        <img src="./image/devilgirl.png" alt="" class="absolute max-w-[170px] h-auto top-0" />
+        <button
+          class="bg-[#58c2fd] text-white absolute top-[178px] text-[14px] w-[135px] p-[4px] rounded-[5px] left-[29px]"
+        >
+          Post Now
+        </button>
+      </div>
+      <div class="flex items-end justify-end mt-[5px] bg-[#fbfef9]">
+        <img src="./image/listtitle_wsm.png" class="w-[86%]" alt="" />
+      </div>
+    </div>
+    <div class="flex items-end justify-end">
+      <div>
+        <h5 class="mt-[4px] text-[#810107] text-[14px] font-bold cursor-pointer">Brandon, MB</h5>
+        <h5 class="text-[#fcb9e3] text-[13px] font-bold underline mb-[12px] cursor-pointer">Change location</h5>
+      </div>
     </div>
 
+    <div>
+      <h6 class="mt-9 bg-[#eafefa] text-[#000] pl-[8px] pt-[4px] pb-[2px] text-[14px] mb-[5px]">Wed. Oct. 30</h6>
+    </div>
+
+    <div class="bg-[#ececec] h-[116px] flex py-[4px] px-[3px]">
+      <div class="h-[97px]">
+        <img src="./image/post-img.jpg" class="h-[97px] w-[97px]" alt="" />
+        <p class="text-[9px] text-center mt-0.5">Posted: 2:35 PM</p>
+      </div>
+      <a href="/post-details.html" class="ml-3">
+        <p class="text-[#0000EE] text-[12px]">𝓞𝓝𝓛𝓨𝓕𝓐𝓝𝓢 𝓒𝓞𝓝𝓣𝓔𝓝𝓣 𝓒𝓡𝓔𝓐𝓣𝓞𝓡🍁 subscribe now for free Content in</p>
+        <p class="text-[#0000EE] text-[12px]">your inbox ➡SALE ➡C⃨l⃨i⃨c⃨k⃨ H⃨e⃨r⃨e⃨🎀</p>
+        <p class="text-[8px]">EDMONTON</p>
+        <p class="text-[10px]">Email: Adriannafox2025@gmail.com</p>
+        <p class="text-[10px]">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, in.</p>
+        <p class="text-[10px]">Lorem ipsum dolor sit amet, consectetu.</p>
+        <p class="text-[10px]">Lorem ipsum dolor sit amet, consectetu. adipisicing eli</p>
+      </a>
+    </div>
+
+    <div class="pagination flex justify-center mt-1">
+      <a href="#" class="page-item px-2 py-0.5 border bg-[#a9b6d4] text-white rounded-[4px] mx-1">1</a>
+      <a href="#" class="page-item px-2 py-0.5 border bg-[#a9b6d4] text-white rounded-[4px] mx-1">2</a>
+      <a href="#" class="page-item px-2 py-0.5 border bg-[#a9b6d4] text-white rounded-[4px] mx-1">3</a>
+    </div>
 
     <footer class="pb-[32px]">
-        <div class="my-[20px] text-center">
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="treams.html">Policies & Terms</a> <span
-                class="text-[#046aaf] text-[12px]">|</span>
-            <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
-            <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="login.html">Manage
-                    Posts</a>
-            </div>
+      <div class="my-[20px] text-center">
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="treams.html">Policies & Terms</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
+        <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">
+          <a href="login.html">Manage Posts</a>
         </div>
+      </div>
 
-        <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
+      <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
     </footer>
-
-</body>
-
+  </body>
 </html>
