--- a/index.html
+++ b/index.html
@@ -1,88 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MegaPersonals: Classified hookups</title>
+    <link href="./dist/styles.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MegaPersonals: Classified hookups</title>
-  <link href="./dist/styles.css" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap"
-    rel="stylesheet" />
-</head>
-
-<body class="max-w-[600px] mx-auto px-[15px]">
-
-  <div class="mt-[25px] grid grid-cols-12">
-    <div class="col-span-4">
-      <img src="./image/devilgirl.png" alt="model-image">
-      <div class=" items-center flex mx-auto  mb-[9px] pl-[15px]">
-        <a href="" style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.36)"
-          class="bg-[#58c2fd] text-[#fff] px-[2px] py-[4px] text-[18px] rounded-[5px] w-[85%] text-center font-bold ">POST
-          NOW</a>
+  <body class="max-w-[600px] mx-auto px-[15px]">
+    <div class="mt-[25px] grid grid-cols-12">
+      <div class="col-span-4">
+        <img src="./image/devilgirl.png" alt="model-image" />
+        <div class="items-center flex mx-auto mb-[9px] pl-[15px]">
+          <a
+            href=""
+            style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.36)"
+            class="bg-[#58c2fd] text-[#fff] px-[2px] py-[4px] text-[18px] rounded-[5px] w-[85%] text-center font-bold"
+            >POST NOW</a
+          >
+        </div>
+        <div class="w-[90%]">
+          <h6 class="text-[#810107] cursor-pointer text-[14px] font-bold mt-[4px] text-center">Select location</h6>
+          <h5 class="cursor-pointer text-[#fcb9e3] text-[13px] underline font-bold mb-[12px] text-center">
+            change location
+          </h5>
+          <img src="./image/topLeftFlowers_trans.png" alt="model-image" />
+        </div>
       </div>
-      <div class="w-[90%]">
-        <h6 class="text-[#810107] cursor-pointer text-[14px] font-bold mt-[4px] text-center"> Select location </h6>
-        <h5 class="cursor-pointer text-[#fcb9e3] text-[13px] underline font-bold mb-[12px] text-center">change location
-        </h5>
-        <img src="./image/topLeftFlowers_trans.png" alt="model-image">
-      </div>
-
-
-    </div>
-    <div class="col-span-8">
-      <img src="./image/megapersonalsPageHeader2.png" alt="model-image">
-      <img class="my-[10px]" src="./image/meetnow.png" alt="model-image">
-      <div>
-        <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">MegaPersonals is restricted to</p>
-        <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">persons 18 years of age or older*</p>
-      </div>
-      <div class="w-full mt-[4rem]">
-        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
-          class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a
-            href="post-list.html">W
-            seek
-            M</a></button>
-        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
-          class="bg-[#ffa300] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">M seek
-            W</a></button>
-        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
-          class="bg-[#e7c660] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">M seek
-            M</a></button>
-        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
-          class="bg-[#857a30] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a href="">W seek
-            W</a></button>
-        <button style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
-          class="bg-[#a6a3a3] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"><a
-            href="">Trans</a></button>
-
-      </div>
-    </div>
-  </div>
-  <div>
-    <p class="text-center text-[#edddc0] italic"><strong class="text-[#edddc0]">MegaPersonals</strong> is a classifieds
-      service
-    </p>
-    <p class="text-center text-[#edddc0] text-[16px] italic">for people wanting to <strong class="text-[#21d42b]">MEET
-        NOW!</strong>
-    </p>
-  </div>
-  <footer class="pb-[32px]">
-    <div class="my-[20px] text-center">
-      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a> <span
-        class="text-[#046aaf] text-[12px]">|</span>
-      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a> <span
-        class="text-[#046aaf] text-[12px]">|</span>
-      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="treams.html">Policies & Terms</a> <span
-        class="text-[#046aaf] text-[12px]">|</span>
-      <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
-      <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]"><a href="login.html">Manage Posts</a>
+      <div class="col-span-8">
+        <img src="./image/megapersonalsPageHeader2.png" alt="model-image" />
+        <img class="my-[10px]" src="./image/meetnow.png" alt="model-image" />
+        <div>
+          <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">MegaPersonals is restricted to</p>
+          <p class="text-center text-[#dcd1b1] font-bold text-[20px] italic">persons 18 years of age or older*</p>
+        </div>
+        <div class="w-full mt-[4rem]">
+          <button
+            style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+            class="bg-[#c75400] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
+          >
+            <a href="post-list.html">W seek M</a>
+          </button>
+          <button
+            style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+            class="bg-[#ffa300] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
+          >
+            <a href="">M seek W</a>
+          </button>
+          <button
+            style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+            class="bg-[#e7c660] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
+          >
+            <a href="">M seek M</a>
+          </button>
+          <button
+            style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+            class="bg-[#857a30] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
+          >
+            <a href="">W seek W</a>
+          </button>
+          <button
+            style="box-shadow: 1px 4px 14px 0px rgba(50, 50, 50, 0.46)"
+            class="bg-[#a6a3a3] rounded-[3px] h-[49px] text-[31px] w-full mb-4 text-white text-center"
+          >
+            <a href="">Trans</a>
+          </button>
+        </div>
       </div>
     </div>
+    <div>
+      <p class="text-center text-[#edddc0] italic">
+        <strong class="text-[#edddc0]">MegaPersonals</strong> is a classifieds service
+      </p>
+      <p class="text-center text-[#edddc0] text-[16px] italic">
+        for people wanting to <strong class="text-[#21d42b]">MEET NOW!</strong>
+      </p>
+    </div>
+    <footer class="pb-[32px]">
+      <div class="my-[20px] text-center">
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="">Home</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="about-us.html">About Us</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="treams.html">Policies & Terms</a>
+        <span class="text-[#046aaf] text-[12px]">|</span>
+        <a class="text-[#046aaf] py-[2px] font-[Verdana] text-[12px]" href="contact.html">Contact Us</a>
+        <div class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">
+          <a href="login.html">Manage Posts</a>
+        </div>
+      </div>
 
-    <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
-  </footer>
-
-</body>
-
+      <p class="text-center text-[#046aaf] py-[2px] font-[Verdana] text-[12px]">Copyright ©2024 MegaPersonals.eu</p>
+    </footer>
+  </body>
 </html>
